--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KamarKhali Broadband LIVE TV</title>
+    <title>Sports Arena</title>
     <meta name="description" content="ENJOY FREE LIVE IPTV">
     <meta name="keywords" content="Watch live sports streaming online">
     <meta name="author" content="PK">
@@ -307,7 +307,7 @@
     </script>
 
     <footer>
-        <p>&copy; 2024 KamarKhali Broadband. All Rights Reserved.</p>
+        <p>&copy; 2024 TechTV Max. All Rights Reserved.</p>
     </footer>
 </body>
 
